--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,10 +10,8 @@
   position: fixed !important;
   background-color: white !important;
   display: flex !important;
-  flex-direction: column !important;
-  -webkit-box-pack: center !important;
+  flex-direction: row !important;
   justify-content: center !important;
-  -webkit-box-align: center !important;
   align-items: center !important;
   width: 100vw !important;
   height: 95px;
@@ -26,7 +24,6 @@
   width: 80%;
   height: 100% !important;
 }
-
 .logo {
   width: auto;
   min-width: auto;
@@ -35,7 +32,6 @@
   min-height: auto;
   max-height: 100%;
 }
-
 .menu {
   display: flex;
   -webkit-box-pack: center;
@@ -45,7 +41,6 @@
   padding-left: 15px;
   padding-right: 15px;
 }
-
 .menu-item {
   display: inline-flex !important;
   -webkit-box-pack: center !important;
@@ -59,8 +54,9 @@
   color: rgb(1, 10, 17) !important;
   white-space: nowrap !important;
   transition: 0.2s linear !important;
+  text-transform: none !important;
+  font-weight: 600 !important;
 }
-
 .icon {
   color: #0b2545 !important;
 }
@@ -86,8 +82,13 @@
   gap: 8px !important;
   border-radius: 8px !important;
   text-align: center !important;
-  font-family: __gilroy_2ec981, __gilroy_Fallback_2ec981 !important;
+  font-family: __gilroy_2ec981 !important;
   font-weight: 600 !important;
+  height: 53px !important;
+}
+.get-started:hover {
+  background-color: rgb(0, 78, 186) !important;
+  border-color: rgb(0, 78, 186) !important;
 }
 
 /* Language Dropdown */
@@ -147,28 +148,45 @@
   left: 0;
   background: white;
   border: 1px solid #e0e0e0;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  min-width: 120px;
+  width: 255px;
   z-index: 999;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1) !important;
 }
+
 .dropdown-item {
+  position: relative;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  padding: 16px;
+  font-size: 1.125rem;
+  line-height: 1.6;
+  color: rgb(71, 103, 136);
+  font-weight: 600;
+  background-color: white;
   width: 100%;
-  padding: 8px 12px;
-  text-align: left;
-  font-size: 14px;
-  color: #0b2545;
-  background: none;
+  height: 69px;
   border: none;
-  cursor: pointer;
-  transition: 0.2s ease-in-out;
+}
+.dropdown-item:hover {
+  background-color: rgb(240, 243, 248) !important;
 }
 .menu-item {
-  color: rgb(71, 103, 136) !important;
-  font-weight: 700 !important;
-  text-transform: none !important;
-  font-size: 17px !important;
-  font-family: __gilroy_2ec981 !important;
+  display: inline-flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  gap: 2px;
+  font-size: 1rem;
+  line-height: 1.6;
+  font-weight: 700;
+  color: rgb(11, 53, 88);
+  white-space: nowrap;
+  transition: 0.2s linear;
 }
 
 /* Language Dropdown */
@@ -219,36 +237,36 @@
   padding: 20px;
   padding-top: 50px;
   justify-content: center !important;
+  align-items: stretch !important;
 }
-
-.dropdown-content {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 10px;
-  padding-left: 30px;
-}
-
 .dropdown-content > div {
   flex: 1;
   padding: 10px;
+  width: 100% !important;
 }
-
 .dropdown-content h6 {
-  font-size: 14px;
-  font-weight: bold;
-  color: gray;
-  margin-bottom: 10px;
-  text-transform: uppercase;
+  font-size: 1rem;
+  line-height: 1.2;
+  font-weight: 600;
+  letter-spacing: 1.25px;
+  text-align: left;
+  color: rgb(166, 187, 209);
+  padding-left: 15px;
 }
-
 .dropdown-content .MuiListItemText-primary {
-  font-size: 16px !important;
-  color: rgb(11, 53, 88) !important;
+  font-size: 19px;
+  line-height: 1.6;
+  width: fit-content;
+  text-align: left;
+  color: rgb(11, 53, 88);
+  font-weight: 500;
+  cursor: pointer;
 }
 
-.dropdown-content .MuiListItem-button:hover {
-  background-color: rgba(0, 107, 255, 0.1) !important;
+.dropdown-content .MuiListItemText-primary:hover {
+  color: rgb(0, 107, 255);
+  cursor: pointer;
 }
 .one {
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  border: 1px solid #e0e0e0;
 }
