--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -6,24 +6,23 @@
   left: 0;
   z-index: 1000;
 }
-
 .navbar {
-  position: sticky;
+  position: sticky !important;
   top: 0;
   background-color: white !important;
   display: flex !important;
   flex-direction: row !important;
   justify-content: center !important;
   align-items: center !important;
-  width: 100vw !important;
-  height: 95px;
+  width: 100% !important;
+  height: 82px;
+  border: none !important;
 }
-
 .navbar-toolbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
+  width: 70%;
   height: 100% !important;
 }
 .logo {
@@ -40,7 +39,7 @@
   padding-left: 15px;
   padding-right: 15px;
 }
-.menu-item {
+ .desktop-menu {
   display: inline-flex !important;
   -webkit-box-pack: center !important;
   justify-content: center !important;
@@ -50,12 +49,12 @@
   font-size: 1rem !important;
   line-height: 1.6 !important;
   font-weight: 700 !important;
-  color: rgb(1, 10, 17) !important;
+  color: rgb(11, 53, 88) !important;
   white-space: nowrap !important;
   transition: 0.2s linear !important;
   text-transform: none !important;
   font-weight: 600 !important;
-}
+} 
 .icon {
   color: white!important;
 }
@@ -93,9 +92,8 @@
 /* Language Dropdown */
 .navbar-top-container {
   width: 100% !important;
-  height: 56px !important;
+  height: 48px !important;
   background-color: rgb(248, 249, 251) !important; 
-  display: flex !important;
   justify-content: flex-start !important;
   align-items: center !important;
   padding: 0 20px !important; 
@@ -112,7 +110,7 @@
   align-items: center !important;
   justify-content: flex-end;
   height: 100%;
-  width: 83%;
+  width: 74%;
 }
 .icon {
   width: 16px !important;
@@ -121,7 +119,6 @@
   color: rgb(71, 103, 136) !important;
 }
 .language-dropdown {
-  position: relative;
   display: flex;
   align-items: center;
 }
@@ -137,8 +134,7 @@
   transition: 0.2s ease-in-out !important;
   list-style: 28px !important;
   font-family: __gilroy_2ec981 !important;
-  text-transform: none !important;
-  
+  text-transform: none !important;  
 }
 .dropdown-icon {
   margin-left: 5px;
@@ -154,8 +150,6 @@
   z-index: 999;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1) !important;
 }
-
-
 
 .menu-item {
   display: inline-flex;
