--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,37 +1,27 @@
-#signup-body{
- font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
-    
-}
-#signup-head-text{
-  color:  rgb(11, 53, 88);
-    
-}
-#signup-text{
-    color: rgb(71, 103, 136);
-    font-size: 1.125rem;
 
-}
-#signup-btn{
-    background-color: rgb(0, 107, 255);
-    color: #fff;
-    font-size:  .9rem;
-    border-radius: 8px;
-    font-weight: 600;
-    padding: 10px 18px;
-}
-#signup-btn:hover{
-    background-color: rgb(21, 85, 174);
-}
-#signup-text1{
-    color:#476788;
-    font-weight: 400;
-}
-#signup-login-link{
-    display: flex;
-    justify-content: center;
-    margin-top: 16px;
-    text-decoration: none;
-    cursor: pointer;
-    font-weight: 600;
-    color: rgb(0, 107, 255);
+
+
+
+
+
+
+.signup-link {
+    cursor: pointer !important;
+    transition: 0.2s linear, background-position 1ms, background-size 1ms !important;
+    color: rgb(0, 107, 255) !important;
+    font-size: 1.125rem !important;
+    line-height: 1.6 !important;
+    position: relative !important;
+    height: fit-content !important;
+    flex-direction: row !important;
+    padding: 0px !important;
+    display: inline-flex !important;
+    opacity: 1 !important;
+    align-items: center !important;
+    justify-content: center !important;
+    gap: 8px !important;
+    border-radius: 4px !important;
+    text-align: left !important;
+    font-family: __gilroy_2ec981, __gilroy_Fallback_2ec981 !important;
+    font-weight: 600 !important;
 }
