--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,10 +1,9 @@
 .navbar-container {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
+  width: 100% !important;
+  position: absolute !important;
   top: 0;
   left: 0;
-  z-index: 1000;
+  background-color: "rgb(248, 249, 251)" !important;
 }
 .navbar {
   position: sticky !important;
@@ -15,14 +14,16 @@
   justify-content: center !important;
   align-items: center !important;
   width: 100% !important;
-  height: 82px;
-  border: none !important;
+  height: 75px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1) !important;
+  box-shadow: none !important;
 }
 .navbar-toolbar {
   display: flex;
-  justify-content: space-between;
+  align-content: center;
+  justify-content: space-between !important;
   align-items: center;
-  width: 70%;
+  width: 80%;
   height: 100% !important;
 }
 .logo {
@@ -32,14 +33,13 @@
 }
 .menu {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   -webkit-box-pack: center;
-  justify-content: center;
   width: auto;
-  gap: 30px;
-  padding-left: 15px;
-  padding-right: 15px;
+  gap: 50px;
 }
- .desktop-menu {
+.desktop-menu {
   display: inline-flex !important;
   -webkit-box-pack: center !important;
   justify-content: center !important;
@@ -54,9 +54,9 @@
   transition: 0.2s linear !important;
   text-transform: none !important;
   font-weight: 600 !important;
-} 
+}
 .icon {
-  color: white!important;
+  color: white !important;
 }
 
 .get-started {
@@ -77,7 +77,7 @@
   align-items: center !important;
   -webkit-box-pack: center !important;
   justify-content: center !important;
-  gap: 8px !important;
+  gap: 17px !important;
   border-radius: 8px !important;
   text-align: center !important;
   font-family: __gilroy_2ec981 !important;
@@ -92,11 +92,11 @@
 /* Language Dropdown */
 .navbar-top-container {
   width: 100% !important;
-  height: 48px !important;
-  background-color: rgb(248, 249, 251) !important; 
+  height: 40px !important;
+  background-color: rgb(248, 249, 251) !important;
   justify-content: flex-start !important;
   align-items: center !important;
-  padding: 0 20px !important; 
+  padding: 0 20px !important;
 }
 .navbar-top-container *:hover {
   color: rgb(0, 107, 255) !important;
@@ -110,12 +110,11 @@
   align-items: center !important;
   justify-content: flex-end;
   height: 100%;
-  width: 74%;
+  width: 83%;
 }
 .icon {
-  width: 16px !important;
-  height: 16px !important;
-  margin-right: 2px !important;
+  width: 14px !important;
+  height: 14px !important;
   color: rgb(71, 103, 136) !important;
 }
 .language-dropdown {
@@ -125,16 +124,13 @@
 .dropdown-btn {
   display: flex !important;
   align-items: center !important;
-  font-size: 16px !important;
-  font-weight: 700 !important;
   color: rgb(71, 103, 136) !important;
   background: none !important;
   border: none;
   cursor: pointer !important;
   transition: 0.2s ease-in-out !important;
-  list-style: 28px !important;
-  font-family: __gilroy_2ec981 !important;
-  text-transform: none !important;  
+  list-style: 24px !important;
+  text-transform: none !important;
 }
 .dropdown-icon {
   margin-left: 5px;
@@ -182,7 +178,6 @@
   flex: 1;
   padding: 10px;
   width: 100% !important;
-  
 }
 .dropdown-content h6 {
   font-size: 1rem;
@@ -210,16 +205,3 @@
 .one {
   border: 1px solid #e0e0e0;
 }
-
-
-
-
-@media (max-width: 768px) {
-  .desktop-menu {
-    display: none; /* Hide desktop menu */
-  }
-  .mobile-menu-icon {
-    display: block; /* Show mobile menu button */
-  }
-}
-
